@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:26:46 brook Exp $
+
+SHA1 (R/httpuv_1.5.1.tar.gz) = 5dd42f39bfda919ad890eea978089d27b2bc72da
+RMD160 (R/httpuv_1.5.1.tar.gz) = 24558208c04722e5844ccbe87fdcefc8db9aaa29
+SHA512 (R/httpuv_1.5.1.tar.gz) = 17d1d9a922c17ebd738a59d3671e3d29f097937ef60774898f71dcfa0468d73d8c3b32915b6990941c9b7b03929fbdd6405932fa69672b004a0d129d3cded8c0
+Size (R/httpuv_1.5.1.tar.gz) = 1758514 bytes
